--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.unity.2d.psdimporter": "9.0.3",
+    "com.unity.2d.spriteshape": "10.0.7",
     "com.unity.ai.navigation": "2.0.5",
     "com.unity.collab-proxy": "2.8.1",
     "com.unity.ide.rider": "3.0.31",
